Disable display list for 2D canvas when the canvas is color managed

For now display list is supported for 2D canvas only if the color space
is legacy-srgb. If it is not, display list must be disabled.

BUG=659251
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2472783002
Cr-Commit-Position: refs/heads/master@{#429419}

Former-commit-id: c6ca4583cfe1d240959b65a42ea52c8afb515bdb