content/test/gpu/gpu_tests/pixel_expectations.py
@@ -40,3 +40,9 @@ class PixelExpectations(GpuTestExpectations):
 
     # TODO(kbr): flakily timing out on this configuration.
     self.Flaky('*', ['linux', 'intel', 'debug'], bug=648369)
+
+    # TODO(zakerinasab): Check / generate reference images. Remove the Fail
+    # lines after fixing 657946 and comment out the Skip line.
+    self.Fail('Pixel_CanvasDisplayLinearRGBAccelerated2D', bug=657946)
+    self.Fail('Pixel_CanvasDisplayLinearRGBUnaccelerated2D', bug=657946)
+    self.Fail('Pixel_CanvasDisplayLinearRGBUnaccelerated2DGPUCompositing', bug=657946)
